--- a/5.6/extension/xdebug/Dockerfile
+++ b/5.6/extension/xdebug/Dockerfile
@@ -1,7 +1,7 @@
 FROM plab/docker-php:5.6-fpm
 
 #Install Xdebug
-RUN curl -sS http://xdebug.org/files/xdebug-2.3.2.tgz -o xdebug-2.3.2.tgz \
+RUN curl -sS https://xdebug.org/files/xdebug-2.3.2.tgz -o xdebug-2.3.2.tgz \
     && mkdir -p /usr/src/php/xdebug \
     && tar -xof xdebug-2.3.2.tgz -C /usr/src/php/xdebug --strip-components=1 \
     && rm xdebug-2.3.2.tgz \
